# dilithiumr

./: .gitignore  Cargo.toml  README.md  universal_dilithium.wai
src/: algorithm.rs  constants.rs  conversion.rs  helper.rs  lib.rs  packing.rs  poly.rs  reduce.rs  rejection.rs  round.rs  rounding.rs
src/algebra/: matrix.rs  mod.rs  poly.rs  vec.rs
