[package]
name = "dilithiumr"
version = "0.1.0"
edition = "2021"
author = "Hugo PEYRON"
description = "Universal Dilithium library."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
pyo3 = { version = "0.19.2", features = ["abi3-py37"], optional = true }
rand = { version = "0.8.5" }
sha3 = "0.10.8"
wasm-bindgen = "0.2.87"

[features]
default = ["python"]
js = []
python = ["dep:pyo3"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
